manifests/fixed/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fixed
  labels:
    environment: simulation
    state: fixed
