manifests/fixed/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: fixed
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: python:3.9-slim
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi" # FIX: Increased to 512Mi to accomodate 300MB workload
            cpu: "500m"
        command: 
        - python
        - -c
        - |
          import time
          import os
          print("Starting Memory Stressor...")
          # Allocate 300MB chunks
          payload = "A" * (1024 * 1024 * 300) 
          print("Allocated 300MB. I am alive! Sleeping...")
          while True:
            time.sleep(1)
